- fix PATCHIMAGE_ROM_DIR setup when no ${HOME}/.patchimage.rc exists
- fix error messages or required user-input during batch-build by
  creating a separate build directory, when create the mod and before
  the next build is done that build directory is removed and re-created
  - when ${PWD} is writable that will be ${PWD}/patchimage_build, else
    it will be ${HOME}/patchimage_build

v7.2.1:
::bug fixes
- fix ID for Kirby's Adventure Wii and Mario Kart Wii for US versions

v7.2.0:
::internal changes
- functions for applying IPS, PPF and BPS patches now check for patch zip files
  in ${PWD} and ${PACHIMAGE_RIIVOLUTION_DIR}, just like all other functions and
  unpack them, if found
- functions for applying IPS, PPF and BPS patches now look in ${PWD} and
  ${PATCHIMAGE_RIIVOLUTION_DIR} for patch files
- functions for applying IPS, PPF and BPS patches thus only fail when they
  neither find a zip archive containing the patch, or the bare patch file
- HANS patcher now supports applying DELTA patches
- split out messages into message.sh
- automatic downloading is not possible from SendSpace, update downloader
  function to inform user to manually download from there

::bug fixes
- Pokemon Star Sapphire was accidently called Alpha Sapphire in the menu,
  also had wrong Short ID
- fixed that Opening Title for US version was applied to EU version in
  MLG Super Mario Bros. Wii (fixes black screen on start)
- fixed regression from version 7.1.0 that made it impossible to patch
  US version of New Super Mario Bros. Wii because it was looking for wrong
  ID SMNU01 instead of correct ID SMNE01
- fixed black screen in Devil Mario Winter Special by not applying the custom
  openingTitle.arc for PAL New Super Mario Bros. Wii
- fixed black screen in Remixed Super Mario Bros. Wii by not applying the custom
  openingTitle.arc for PAL and JAP New Super Mario Bros. Wii
- fixed that the script did try to automatically download from mediafire instead